--- a/package.json
+++ b/package.json
@@ -8,19 +8,25 @@
   "author": "HyeRyun",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^4.5.3",
+    "jquery": "^3.5.1",
     "node-sass": "^5.0.0",
+    "popper.js": "^1.16.1",
     "react": "^16.14.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
-    "react-refresh-webpack-plugin": "^0.1.0"
+    "react-refresh-webpack-plugin": "^0.1.0",
+    "react-transition-group": "^1.2.1",
+    "reactstrap": "^8.7.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
+    "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.5",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@webpack-cli/serve": "^1.1.0",
-    "babel-loader": "^8.2.1",
+    "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "react-refresh": "^0.9.0",
     "sass-loader": "^10.1.0",
