--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@webpack-cli/serve": "^1.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "gh-pages": "^3.1.0",
     "react-refresh": "^0.9.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
