--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "author": "HyeRyun",
   "license": "MIT",
+  "homepage": "https://haroong.github.io/",
   "dependencies": {
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
