--- a/package.json
+++ b/package.json
@@ -2,18 +2,12 @@
   "name": "lecture",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "dev": "webpack serve --env development",
-    "deploy": "gh-pages -d build",
-    "predeploy": "npm run build"
-  },
   "author": "HyeRyun",
   "license": "MIT",
-  "homepage": "https://haroong.github.io/haroong.github.io",
+  "homepage": "https://haroong.github.io/haroong.github.io.git",
   "dependencies": {
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
-    "node-sass": "^5.0.0",
     "popper.js": "^1.16.1",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
@@ -32,12 +26,19 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "gh-pages": "^3.1.0",
+    "node-sass": "^5.0.0",
+    "postcss": "^8.2.1",
+    "postcss-loader": "^4.1.0",
     "react-refresh": "^0.9.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
+  },
+  "scripts": {
+    "dev": "webpack serve --env development",
+    "deploy": "gh-pages"
   },
   "keywords": [],
   "description": ""
