--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "scripts": {
     "dev": "webpack serve --env development",
-    "deploy": "gh-pages"
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "description": ""
