--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "license": "MIT",
   "homepage": "https://haroong.github.io/react-albaCalculator/",
   "dependencies": {
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "cheerio": "^1.0.0-rc.3",
+    "cors": "^2.8.5",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "react": "^16.14.0",
@@ -14,7 +17,8 @@
     "react-dom": "^16.14.0",
     "react-refresh-webpack-plugin": "^0.1.0",
     "react-transition-group": "^1.2.1",
-    "reactstrap": "^8.7.1"
+    "reactstrap": "^8.7.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -38,6 +42,7 @@
   },
   "scripts": {
     "dev": "webpack serve --env development",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "keywords": [],
