--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "main": "index.js",
   "author": "HyeRyun",
   "license": "MIT",
-  "homepage": "https://haroong.github.io/react-albaCalculator/",
   "scripts": {
-    "dev": "webpack serve --env development",
-    "deploy": "gh-pages -d build"
+    "start": "webpack serve --env development"
   },
   "dependencies": {
     "axios": "^0.21.0",
