--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack serve --env development",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start":"node index.js",
+    "start": "node index.js"
   },
   "dependencies": {
     "axios": "^0.21.0",
@@ -18,11 +18,9 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "react": "^16.14.0",
-    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
     "react-refresh-webpack-plugin": "^0.1.0",
     "react-transition-group": "^1.2.1",
-    "reactstrap": "^8.7.1",
     "request": "^2.88.2"
   },
   "devDependencies": {
